Fix jumping div

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,6 +34,7 @@ body {
   justify-content: center;
   padding: 35px 10%;
   background: rgba(255, 255, 255, 0.6);
+  min-height: 350px;
 }
 
 
